website updates html css js

--- a/elan/index.html
+++ b/elan/index.html
@@ -4,88 +4,76 @@
 <head>
   <meta charset="UTF-8">
 
-  <title>Elan The Statement Sector 49 Gurugram | Ultra Luxury Residences</title>
+  <title>Elan The Statement Sector 49 Gurugram | Ultra Luxury 4 BHK Residences</title>
 
   <meta name="description"
-    content="Elan The Statement Sector 49 Gurugram offers ultra-luxury residences with premium specifications, smart automation and world-class amenities. Download brochure & floor plans.">
+    content="Elan The Statement Sector 49 Gurugram offers ultra luxury 4 BHK residences by Elan Group with smart home automation and premium amenities. Get price, floor plans & brochure.">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="keywords"
+    content="Elan The Statement Sector 49 Gurugram, Ultra Luxury Residences Gurugram, 4 BHK Luxury Apartments Elan, Elan Group Projects">
+  <!-- CANONICAL -->
+  <link rel="canonical" href="https://apexlandbase.com/elan-the-statement-sector-49">
 
-  <!-- ===== SEO CORE ===== -->
-  <link rel="canonical" href="https://www.yourdomain.com/elan-the-statement-sector-49-gurugram">
-  <meta name="robots" content="index, follow, max-image-preview:large">
-  <meta name="author" content="Apex Landbase">
-  <meta name="publisher" content="Apex Landbase">
+  <!-- STYLESHEET -->
+  <link rel="stylesheet" href="/editing/elan.css">
+
+  <!-- PERFORMANCE (optional but recommended) -->
+  <link rel="preconnect" href="https://elan-in.b-cdn.net" crossorigin>
+
+  <!-- THEME -->
   <meta name="theme-color" content="#0e0e0e">
-
-  <!-- ===== OPEN GRAPH ===== -->
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="Elan The Statement Sector 49 Gurugram | Ultra Luxury Residences">
-  <meta property="og:description"
-    content="Ultra luxury residences by Elan Group in Sector 49 Gurugram with smart homes & premium amenities.">
-  <meta property="og:url" content="https://www.yourdomain.com/elan-the-statement-sector-49-gurugram">
-  <meta property="og:image" content="https://www.yourdomain.com/elan/images/overview.webp">
-  <meta property="og:site_name" content="Elan The Statement">
-
-  <!-- ===== TWITTER ===== -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Elan The Statement Sector 49 Gurugram">
-  <meta name="twitter:description"
-    content="Ultra luxury residences by Elan Group in Gurugram with smart automation & elite living.">
-  <meta name="twitter:image" content="https://www.yourdomain.com/elan/images/overview.webp">
-
-  <!-- ===== PERFORMANCE ===== -->
-  <link rel="preload" href="/editing/elan.css" as="style">
-  <link rel="preload" as="video" href="/elan/images/hero.webm" type="video/webm">
-  <link rel="dns-prefetch" href="//www.google-analytics.com">
-
-  <link rel="preload" href="/editing/elan.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-  <noscript>
-    <link rel="stylesheet" href="/editing/elan.css">
-  </noscript>
 </head>
 
 <body>
 
   <!-- ================= HEADER ================= -->
-  <header class="site-header">
-    <div class="nav">
+ <header class="site-header">
+  <div class="nav">
 
-      <div class="logo-text">
-        <span class="brand">ELAN</span>
-        <span class="project">THE STATEMENT</span>
-        <small class="tagline">SECTOR 49, GURUGRAM</small>
-      </div>
-
-      <nav class="menu" aria-label="Primary Navigation">
-        <a href="#overview">Overview</a>
-        <a href="#residences">Residences</a>
-        <a href="#masterplan">Master Plan</a>
-        <a href="#floorplan">Floor Plan</a>
-        <a href="#gallery">Gallery</a>
-        <a href="#amenities">Amenities</a>
-        <a href="#contact">Contact</a>
-
-        <a href="javascript:void(0)" class="brochure-header-btn" onclick="openBrochure()"
-          aria-label="Download Brochure">
-          Download Brochure
-        </a>
-      </nav>
-
+    <div class="logo-text">
+      <span class="brand">ELAN</span>
+      <span class="project">THE STATEMENT</span>
+      <small class="tagline">SECTOR 49, GURUGRAM</small>
     </div>
-  </header>
 
+    <!-- MOBILE HAMBURGER (ADD HERE) -->
+    <div class="hamburger" id="hamburger">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+
+    <nav class="menu" aria-label="Primary Navigation">
+      <a href="#overview">Overview</a>
+      <a href="#residences">Residences</a>
+      <a href="#masterplan">Master Plan</a>
+      <a href="#floorplan">Floor Plan</a>
+      <a href="#gallery">Gallery</a>
+      <a href="#amenities">Amenities</a>
+      <a href="#contact">Contact</a>
+
+      <a href="javascript:void(0)"
+         class="brochure-header-btn"
+         onclick="openBrochure()">
+        Download Brochure
+      </a>
+    </nav>
+
+  </div>
+</header>
   <!-- ================= HERO ================= -->
   <section class="hero">
 
-    <video autoplay muted loop playsinline preload="none" poster="/elan/images/amenities.webp">
+    <video autoplay muted loop playsinline preload="metadata" poster="/elan/images/amenities.webp">
       <source src="/elan/images/hero.webm" type="video/webm">
     </video>
 
     <div class="hero-content">
-      <h1>For Generations To Come</h1>
-      <p class="hero-subtitle">Ultra Luxury Residences by Elan Group</p>
-
+      <h1>Elan The Statement –Ultra Luxury Residences in Sector 49 <br> Gurugram</h1>
+      <p class="hero-subtitle">
+        Premium 4 BHK Residences by Elan Group
+      </p>
       <div class="hero-highlights">
         <span>Ultra Luxury</span>
         <span>Sector 49</span>
@@ -110,8 +98,8 @@
           <p>
             Elan The Statement is an ultra-luxury residential development by Elan Group,
             designed to redefine sophisticated living in Sector 49, Gurugram.
-            The project reflects timeless architecture, premium materials and
-            thoughtfully curated spaces for an elevated lifestyle.
+            Explore the <a href="#floorplan">floor plans</a> and
+            <a href="#amenities">luxury amenities</a> designed for elevated living.
           </p>
         </div>
 
@@ -143,15 +131,11 @@
           <li><strong>Design Philosophy:</strong> Timeless, elegant & future-ready</li>
           <li><strong>Focus:</strong> Luxury, comfort & technology-driven living</li>
         </ul>
-
       </div>
-
       <div class="overview-image">
-        <img src="/elan/images/overview.webp" alt="Elan The Statement Overview" width="600" height="450" loading="lazy"
-          decoding="async">
+        <img src="/elan/images/overview.webp" alt="Elan The Statement Sector 49 Gurugram Ultra Luxury Residences"
+          width="1600" height="900" loading="lazy" decoding="async">
       </div>
-
-    </div>
   </section>
 
   <!-- ================= RESIDENCES ================= -->
@@ -169,16 +153,17 @@
           <li>Premium modular kitchen with appliances</li>
           <li>Luxury bathrooms with global brands</li>
         </ul>
-
         <p class="residences-text">
           Every residence at Elan The Statement is crafted with attention to detail,
-          offering refined interiors, intelligent layouts and world-class specifications.
+          offering refined interiors and intelligent layouts.
+          View detailed <a href="#floorplan">4 BHK floor plans</a> and
+          understand the <a href="#masterplan">master plan layout</a>.
         </p>
       </div>
 
       <div class="residences-images">
-        <img src="/elan/images/interior1.webp" alt="Luxury Living Room">
-        <img src="/elan/images/interior2.webp" alt="Luxury Bedroom">
+        <img src="/elan/images/residence1.webp" alt="Luxury Living Room">
+        <img src="/elan/images/residence2.webp" alt="Luxury Bedroom">
       </div>
 
     </div>
@@ -228,48 +213,70 @@
     <img src="/elan/images/masterplan1.webp" alt="Elan The Statement Master Plan Full View" class="master-full">
   </div>
   <!-- ================= FLOOR PLAN ================= -->
-  <section id="floorplan" class="apex-floorplan">
+<section id="floorplan" class="apex-floorplan">
 
-    <div class="container floorplan-wrap">
+  <div class="container floorplan-wrap">
 
-      <!-- LEFT CONTENT -->
-      <div class="floorplan-content">
-        <h2 class="apex-title">Floor Plans</h2>
-        <span class="apex-line"></span>
+    <!-- LEFT CONTENT -->
+    <div class="floorplan-content">
 
-        <p>
-          Elan The Statement offers a wide range of thoughtfully planned
-          4 BHK residences and exclusive penthouse layouts. The project
-          features multiple configurations designed to cater to different
-          lifestyle needs while maintaining privacy, space and luxury.
-        </p>
+      <h2 class="apex-title">Floor Plans</h2>
+      <span class="apex-line"></span>
 
-        <ul class="floorplan-list">
-          <li>Multiple 4 BHK layout options</li>
-          <li>Exclusive duplex & penthouse configurations</li>
-          <li>Private lift lobbies for select residences</li>
-          <li>Large balconies & expansive living areas</li>
-          <li>Servant room and utility space in all layouts</li>
-          <li>Sky deck options in penthouse residences</li>
-        </ul>
+      <p>
+        Elan The Statement offers a wide range of thoughtfully planned
+        4 BHK residences and exclusive penthouse layouts. The project
+        features multiple configurations designed to cater to different
+        lifestyle needs while maintaining privacy, space and luxury.
+      </p>
 
-        <a href="/elan/brochure/Elan The Statement - Floor Plan.pdf" class="floorplan-btn" target="_blank" download>
-          Download All Floor Plans
-        </a>
-      </div>
+      <ul class="floorplan-list">
+        <li>Multiple 4 BHK layout options</li>
+        <li>Exclusive duplex & penthouse configurations</li>
+        <li>Private lift lobbies for select residences</li>
+        <li>Large balconies & expansive living areas</li>
+        <li>Servant room and utility space in all layouts</li>
+        <li>Sky deck options in penthouse residences</li>
+      </ul>
 
-      <!-- RIGHT : SAMPLE FLOOR PLANS -->
-      <div class="floorplan-images">
-        <img src="/elan/images/floorplan.webp" alt="Elan The Statement Sample 4 BHK  ground Floor Plan" loading="lazy">
+      <a
+        href="/elan/brochure/Elan The Statement - Floor Plan.pdf"
+        class="floorplan-btn"
+        target="_blank"
+        download
+      >
+        Download All Floor Plans
+      </a>
 
-        <img src="/elan/images/floorplan2.webp" alt="Elan The Statement Sample typical Floor Plan" loading="lazy">
+    </div>
+
+    <!-- RIGHT : FLOOR PLAN IMAGES (SLIDER) -->
+    <div class="floorplan-images">
+
+      <div class="fp-slider">
+        <div class="fp-track">
+
+          <img
+            src="/elan/images/floorplan.webp"
+            alt="Elan The Statement Sample 4 BHK Ground Floor Plan"
+            loading="lazy"
+          >
+
+          <img
+            src="/elan/images/floorplan2.webp"
+            alt="Elan The Statement Sample Typical Floor Plan"
+            loading="lazy"
+          >
+
+        </div>
       </div>
 
     </div>
 
-  </section>
-  <!-- ================= END FLOOR PLAN ================= -->
+  </div>
 
+</section>
+<!-- ================= END FLOOR PLAN ================= -->
   <!-- ================= GALLERY ================= -->
   <section id="gallery">
     <div class="container">
@@ -277,10 +284,10 @@
       <div class="section-line"></div>
 
       <div class="gallery">
-        <img src="/elan/images/image.webp">
-        <img src="/elan/images/gallery2.webp">
-        <img src="/elan/images/gallery3.webp">
-        <img src="/elan/images/gallery4.webp">
+        <img src="/elan/images/image.webp" alt="luxurious hall">
+        <img src="/elan/images/gallery2.webp" alt="elan luxury balcony view">
+        <img src="/elan/images/gallery3.webp" alt="entry view">
+        <img src="/elan/images/gallery4.webp" alt="gardening area">
       </div>
     </div>
   </section>
@@ -308,7 +315,7 @@
 
     </div>
   </section>
- <!-- ===== APEX LANDBASE : COMMON POPUP FORM ===== -->
+  <!-- ===== APEX LANDBASE : COMMON POPUP FORM ===== -->
   <div id="apexPopupBg" class="apex-popup-bg">
     <div class="apex-popup-box">
 
@@ -338,58 +345,58 @@
       Our team will contact you shortly.
     </div>
   </div>
-<!-- ================= CONTACT ================= -->
-<section id="contact" class="contact-section">
-  <div class="contact-wrap">
+  <!-- ================= CONTACT ================= -->
+  <section id="contact" class="contact-section">
+    <div class="contact-wrap">
 
-    <div class="contact-text">
-      <h2>Enquire Now</h2>
-      <p>
-        Get complete details about pricing, floor plans and exclusive offers for
-        <strong>Elan The Statement</strong> – an ultra-luxury residential development
-        in Sector 49, Gurugram.
-      </p>
+      <div class="contact-text">
+        <h2>Enquire Now</h2>
+        <p>
+          Get complete details about pricing, floor plans and exclusive offers for
+          <strong>Elan The Statement</strong> – an ultra-luxury residential development
+          in Sector 49, Gurugram.
+        </p>
 
-      <ul>
-        <li>✔ Ultra-Luxury Residences with Premium Finishes</li>
-        <li>✔ Prime Location – Sector 49, Gurugram</li>
-        <li>✔ Smart Living with Home Automation</li>
-        <li>✔ Developed by Elan Group</li>
-      </ul>
+        <ul>
+          <li>✔ Ultra-Luxury Residences with Premium Finishes</li>
+          <li>✔ Prime Location – Sector 49, Gurugram</li>
+          <li>✔ Smart Living with Home Automation</li>
+          <li>✔ Developed by Elan Group</li>
+        </ul>
+      </div>
+
+      <form class="contact-form">
+        <input type="text" placeholder="Your Name" required>
+        <input type="tel" placeholder="Phone Number" required>
+        <input type="email" placeholder="Email Address" required>
+        <button type="submit">Submit Enquiry</button>
+      </form>
+
     </div>
+  </section>
 
-    <form class="contact-form">
-      <input type="text" placeholder="Your Name" required>
-      <input type="tel" placeholder="Phone Number" required>
-      <input type="email" placeholder="Email Address" required>
-      <button type="submit">Submit Enquiry</button>
-    </form>
+  <!-- ================= FOOTER ================= -->
+  <footer class="lp-footer">
+    <div class="footer-divider"></div>
 
-  </div>
-</section>
+    <p>
+      <strong>RERA Project Registration No.:</strong>
+      HARERA Regn. No. 125 of 2023
+    </p>
 
-<!-- ================= FOOTER ================= -->
-<footer class="lp-footer">
-  <div class="footer-divider"></div>
+    <p>
+      <strong>Site Address:</strong>
+      Elan The Statement, Sector 49,
+      Gurugram, Haryana
+    </p>
 
-  <p>
-    <strong>RERA Project Registration No.:</strong>
-    HARERA Regn. No. 125 of 2023
-  </p>
-
-  <p>
-    <strong>Site Address:</strong>
-    Elan The Statement, Sector 49,
-    Gurugram, Haryana
-  </p>
-
-  <p>
-    Disclaimer: This website is for information purposes only and does not
-    constitute an offer to sell. Project details are indicative and subject
-    to change. Marketed by <strong>Apex Landbase</strong>.
-  </p>
-</footer>
-   <!-- ================= BROCHURE MODAL ================= -->
+    <p>
+      Disclaimer: This website is for information purposes only and does not
+      constitute an offer to sell. Project details are indicative and subject
+      to change. Marketed by <strong>Apex Landbase</strong>.
+    </p>
+  </footer>
+  <!-- ================= BROCHURE MODAL ================= -->
   <div id="brochurePopup" class="brochure-modal">
 
     <div class="modal-box">
@@ -416,23 +423,30 @@
 
   <!-- SAME JS AS MAX -->
   <script src="/js/elan.js" defer></script>
-<script type="application/ld+json">
+  <script type="application/ld+json">
 {
-  "@context": "https://schema.org",
-  "@type": "RealEstateListing",
-  "name": "Elan The Statement",
-  "description": "Ultra luxury residences in Sector 49 Gurugram by Elan Group.",
-  "address": {
-    "@type": "PostalAddress",
-    "addressLocality": "Sector 49",
-    "addressRegion": "Gurugram",
-    "addressCountry": "IN"
+ "@context": "https://schema.org",
+ "@type": "FAQPage",
+ "mainEntity": [
+  {
+   "@type": "Question",
+   "name": "Where is Elan The Statement located?",
+   "acceptedAnswer": {
+    "@type": "Answer",
+    "text": "Elan The Statement is located in Sector 49, Gurugram, Haryana."
+   }
   },
-  "brand": {
-    "@type": "Organization",
-    "name": "Elan Group"
+  {
+   "@type": "Question",
+   "name": "What type of residences are offered?",
+   "acceptedAnswer": {
+    "@type": "Answer",
+    "text": "The project offers ultra-luxury 4 BHK residences and penthouses."
+   }
   }
+ ]
 }
 </script>
 </body>
+
 </html>
