--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
         <!-- CENTRAL PARK DELPHINE -->
         <a href="/delphine/index.html" class="property-card">
-          <img src="/img/CENTRAL DELPHINE.webp" width="320" height="210" loading="lazy" decoding="async"
+          <img src="/img/delphine.webp" width="320" height="210" loading="lazy" decoding="async"
             fetchpriority="low" style="aspect-ratio: 320 / 210; object-fit: cover;" alt="Central Park Delphine">
           <div class="property-info">
             <h3>CENTRAL PARK DELPHINE</h3>
