--- a/max361/index.html
+++ b/max361/index.html
@@ -22,8 +22,7 @@
         <span class="project">361</span>
         <small class="tagline">SECTOR 36A GURUGRAM</small>
       </div>
-
-
+      
       <nav class="menu" aria-label="Main navigation">
         <a href="#overview">Overview</a>
         <a href="#residences">Residence</a>
@@ -213,7 +212,7 @@
       <div class="section-line"></div>
 
       <div class="gallery">
-        <!-- ✅ GALLERY ORDER -->
+        <!-- GALLERY ORDER -->
         <img src="/max361/images/interior1.webp" alt="Dining Interior">
         <img src="/max361/images/interior3.webp" alt="Balcony View">
         <img src="/max361/images/club2.webp" alt="Indoor Games">
