--- a/awards.html
+++ b/awards.html
@@ -219,7 +219,7 @@
             <p>copyright © 2026, apexlandbase</p>
         </div>
     </footer>
-
+<script src="/js/script.js"></script>
 </body>
 
 </html>
