website updates html css js

--- a/ashiana/index.html
+++ b/ashiana/index.html
@@ -21,6 +21,12 @@
         <span class="project">AAROHAM</span>
         <small class="tagline">GURUGRAM</small>
       </div>
+       <!-- MOBILE HAMBURGER (ADD HERE) -->
+      <div class="hamburger" id="hamburger">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
 
       <nav class="menu">
         <a href="#overview">Overview</a>
@@ -334,11 +340,11 @@
         <button type="submit" class="apex-submit-btn">Submit</button>
       </form>
     </div>
-    <div id="thankYouToast" class="toast">
+  </div>
+  <div id="thankYouToast" class="toast">
       <strong>Thank you!</strong><br>
       Our team will contact you shortly.
     </div>
-  </div>
 
   <!-- ================= BROCHURE POPUP ================= -->
   <div id="brochurePopup" class="brochure-modal">
