--- a/contact.html
+++ b/contact.html
@@ -200,6 +200,13 @@
     </div>
   </footer>
 
+  <!-- EMAILJS -->
+  <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+  <script>
+    emailjs.init("Jt6Vp9_-hORbbxZ79");
+  </script>
+   <!-- MAIN JS -->
+  <script src="/js/script.js"></script>
 
 
 </body>
