--- a/elan/index.html
+++ b/elan/index.html
@@ -297,7 +297,7 @@
     <div class="apex-amenities-wrap">
 
       <div class="amenities-image">
-        <img src="/elan/images/amenities.webp">
+        <img src="/elan/images/amenities.webp" alt="The elan Statement-luxury amenities">
       </div>
 
       <div class="amenities-content">
@@ -315,66 +315,67 @@
 
     </div>
   </section>
-  <!-- ===== APEX LANDBASE : COMMON POPUP FORM ===== -->
-  <div id="apexPopupBg" class="apex-popup-bg">
-    <div class="apex-popup-box">
+  <!-- ===== APEX LANDBASE : POPUP FORM ===== -->
+<div id="apexPopupBg" class="apex-popup-bg">
+  <div class="apex-popup-box">
 
-      <button id="apexPopupClose" class="apex-popup-close" aria-label="Close popup">
-        &times;
-      </button>
+    <button id="apexPopupClose" class="apex-popup-close" aria-label="Close popup">
+      &times;
+    </button>
 
-      <div class="apex-popup-header">
-        <img src="/img/image.png" alt="Apex Landbase Logo">
-        <h3>Get Exclusive Details</h3>
-        <p>Register now to receive price, floor plan & offers</p>
-      </div>
-
-      <form id="apexLeadForm" class="apex-lead-form" autocomplete="off">
-        <input type="text" id="apex-name" placeholder="Your Name" aria-label="Your Name">
-        <input type="email" id="apex-email" placeholder="Email Address" aria-label="Email Address">
-        <input type="tel" id="apex-phone" placeholder="Phone Number" aria-label="Phone Number">
-
-        <!-- page tracking -->
-        <input type="hidden" id="apex-page">
-
-        <button type="submit" class="apex-submit-btn">Submit</button>
-      </form>
+    <div class="apex-popup-header">
+      <img src="/img/image.png" alt="Apex Landbase Logo">
+      <h3>Get Exclusive Details</h3>
+      <p>Register now to receive price, floor plan & offers</p>
     </div>
-    <div id="thankYouToast" class="toast">
-      <strong>Thank you!</strong><br>
-      Our team will contact you shortly.
-    </div>
+
+    <form id="apexLeadForm" class="apex-lead-form" autocomplete="off">
+      <input type="text" id="apex-name" placeholder="Your Name" required>
+      <input type="email" id="apex-email" placeholder="Email Address" required>
+      <input type="tel" id="apex-phone" placeholder="Phone Number" required>
+
+      <input type="hidden" id="apex-page">
+
+      <button type="submit" class="apex-submit-btn">Submit</button>
+    </form>
   </div>
-  <!-- ================= CONTACT ================= -->
-  <section id="contact" class="contact-section">
-    <div class="contact-wrap">
+</div>
 
-      <div class="contact-text">
-        <h2>Enquire Now</h2>
-        <p>
-          Get complete details about pricing, floor plans and exclusive offers for
-          <strong>Elan The Statement</strong> – an ultra-luxury residential development
-          in Sector 49, Gurugram.
-        </p>
+<!-- ===== GLOBAL TOAST ===== -->
+<div id="thankYouToast" class="toast">
+  <strong>Thank you!</strong><br>
+  Our team will contact you shortly.
+</div>
 
-        <ul>
-          <li>✔ Ultra-Luxury Residences with Premium Finishes</li>
-          <li>✔ Prime Location – Sector 49, Gurugram</li>
-          <li>✔ Smart Living with Home Automation</li>
-          <li>✔ Developed by Elan Group</li>
-        </ul>
-      </div>
+<!-- ================= CONTACT ================= -->
+<section id="contact" class="contact-section">
+  <div class="contact-wrap">
 
-      <form class="contact-form">
-        <input type="text" placeholder="Your Name" required>
-        <input type="tel" placeholder="Phone Number" required>
-        <input type="email" placeholder="Email Address" required>
-        <button type="submit">Submit Enquiry</button>
-      </form>
+    <div class="contact-text">
+      <h2>Enquire Now</h2>
+      <p>
+        Get complete details about pricing, floor plans and exclusive offers for
+        <strong>Elan The Statement</strong> – an ultra-luxury residential development
+        in Sector 49, Gurugram.
+      </p>
 
+      <ul>
+        <li>✔ Ultra-Luxury Residences with Premium Finishes</li>
+        <li>✔ Prime Location – Sector 49, Gurugram</li>
+        <li>✔ Smart Living with Home Automation</li>
+        <li>✔ Developed by Elan Group</li>
+      </ul>
     </div>
-  </section>
 
+    <form class="contact-form">
+      <input type="text" placeholder="Your Name" required>
+      <input type="tel" placeholder="Phone Number" required>
+      <input type="email" placeholder="Email Address" required>
+      <button type="submit">Submit Enquiry</button>
+    </form>
+
+  </div>
+</section>
   <!-- ================= FOOTER ================= -->
   <footer class="lp-footer">
     <div class="footer-divider"></div>
