--- a/godrej/index.html
+++ b/godrej/index.html
@@ -21,7 +21,7 @@
   <meta property="og:url" content="https://apexlandbase.com/godrej-miraya">
 
   <!-- CSS -->
-  <link rel="stylesheet" href="/editing/godrej.css">
+  <link rel="stylesheet" href="/editing/elan.css">
 
   <link rel="icon" href="/favicon.ico">
 </head>
@@ -72,7 +72,7 @@
 
     <div class="hero-content">
       <!-- ✅ SEO FIXED H1 -->
-      <h1>Godrej Miraya Sector 43 Gurgaon</h1>
+      <h1>Godrej Miraya<br> Sector 43 Gurgaon</h1>
 
       <p class="hero-subtitle">
         Ultra-Luxury 3 & 4 BHK Residences on Golf Course Road
@@ -234,37 +234,55 @@
     <span class="master-close" onclick="closeMasterPlan()">×</span>
     <img src="/godrej/img/masterplan.webp" class="master-full" alt="Godrej Miraya master plan full view">
   </div>
-  <!-- ================= FLOOR PLAN ================= -->
-  <section id="floorplan" class="apex-floorplan">
-    <div class="floorplan-wrap">
+ <section id="floorplan" class="apex-floorplan">
+  <div class="floorplan-wrap">
 
-      <div class="floorplan-content">
-        <h2 class="floorplan-heading">Floor Plans</h2>
-        <span class="floorplan-line"></span>
+    <!-- LEFT CONTENT -->
+    <div class="floorplan-content">
 
-        <ul class="floorplan-list">
-          <li>3 BHK + Utility – 2,711 sq. ft.</li>
-          <li>4 BHK + Utility – 4,000 sq. ft.</li>
-          <li>GLINT – Tower B (Phase 1)</li>
-        </ul>
-      </div>
+      <h2 class="floorplan-heading">Floor Plans</h2>
+      <span class="floorplan-line"></span>
 
-      <!-- RIGHT : FLOOR PLAN SLIDER (FORMAT SAME) -->
-      <div class="floorplan-images">
+      <!-- NEW INTRO TEXT -->
+      <p class="floorplan-text">
+        Godrej Miraya presents meticulously crafted residences with
+        intelligent layouts that maximize space, privacy and natural light.
+        Each floor plan is designed to offer a seamless balance of luxury,
+        comfort and functionality for modern urban living.
+      </p>
 
-        <div class="fp-slider">
-          <div class="fp-track">
+      <!-- ENRICHED LIST -->
+      <ul class="floorplan-list">
+        <li>Spacious 3 & 4 BHK residences with utility areas</li>
+        <li>Well-defined living, dining & private zones</li>
+        <li>Large balconies with panoramic views</li>
+        <li>Optimized layouts for cross ventilation</li>
+        <li>Premium specifications across all configurations</li>
+      </ul>
 
-            <img src="/godrej/img/floorplan1.webp" loading="lazy" alt="3 BHK Floor Plan">
-            <img src="/godrej/img/floorplan2.webp" loading="lazy" alt="4 BHK Floor Plan">
-
-          </div>
-        </div>
-
+      <!-- CONFIG TAGS (NEW – FILLS EMPTY SPACE NICELY) -->
+      <div class="floorplan-tags">
+        <span>3 BHK · 2,711 sq. ft.</span>
+        <span>4 BHK · 4,000 sq. ft.</span>
+        <span>Tower B · Phase 1</span>
       </div>
 
     </div>
-  </section>
+
+    <!-- RIGHT : FLOOR PLAN SLIDER -->
+    <div class="floorplan-images">
+      <div class="fp-slider">
+        <div class="fp-track">
+
+          <img src="/godrej/img/floorplan1.webp" loading="lazy" alt="3 BHK Floor Plan">
+          <img src="/godrej/img/floorplan2.webp" loading="lazy" alt="4 BHK Floor Plan">
+
+        </div>
+      </div>
+    </div>
+
+  </div>
+</section>
   <!-- ================= AMENITIES ================= -->
   <section class="apex-amenities" id="amenities">
 
@@ -349,73 +367,74 @@
     </div>
 
   </section>
-  <!-- ===== APEX LANDBASE : COMMON POPUP FORM ===== -->
-  <div id="apexPopupBg" class="apex-popup-bg">
-    <div class="apex-popup-box">
+  <!-- ===== APEX LANDBASE : POPUP FORM ===== -->
+<div id="apexPopupBg" class="apex-popup-bg">
+  <div class="apex-popup-box">
 
-      <button id="apexPopupClose" class="apex-popup-close" aria-label="Close popup">
-        &times;
-      </button>
+    <button id="apexPopupClose" class="apex-popup-close" aria-label="Close popup">
+      &times;
+    </button>
 
-      <div class="apex-popup-header">
-        <img src="/img/image.png" alt="Apex Landbase Logo">
-        <h3>Get Exclusive Details</h3>
-        <p>Register now to receive price, floor plan & offers</p>
-      </div>
-
-      <form id="apexLeadForm" class="apex-lead-form" autocomplete="off">
-        <input type="text" id="apex-name" placeholder="Your Name" aria-label="Your Name">
-        <input type="email" id="apex-email" placeholder="Email Address" aria-label="Email Address">
-        <input type="tel" id="apex-phone" placeholder="Phone Number" aria-label="Phone Number">
-
-        <!-- page tracking -->
-        <input type="hidden" id="apex-page">
-
-        <button type="submit" class="apex-submit-btn">Submit</button>
-      </form>
+    <div class="apex-popup-header">
+      <img src="/img/image.png" alt="Apex Landbase Logo">
+      <h3>Get Exclusive Details</h3>
+      <p>Register now to receive price, floor plan & offers</p>
     </div>
-    <div id="thankYouToast" class="toast">
-      <strong>Thank you!</strong><br>
-      Our team will contact you shortly.
-    </div>
+
+    <form id="apexLeadForm" class="apex-lead-form" autocomplete="off">
+      <input type="text" id="apex-name" placeholder="Your Name" required>
+      <input type="email" id="apex-email" placeholder="Email Address" required>
+      <input type="tel" id="apex-phone" placeholder="Phone Number" required>
+
+      <input type="hidden" id="apex-page">
+
+      <button type="submit" class="apex-submit-btn">Submit</button>
+    </form>
   </div>
-  <!-- ================= CONTACT ================= -->
-  <section id="contact" class="contact-section">
-    <div class="contact-wrap">
+</div>
 
-      <div class="contact-text">
-        <h2>Enquire Now</h2>
-        <p>
-          Get complete details about pricing, floor plans and site visit for
-          <strong>Godrej Miraya</strong> – ultra-luxury residences on Golf Course Road,
-          Sector 43, Gurugram.
-        </p>
+<!-- ===== GLOBAL TOAST (ONLY ONCE) ===== -->
+<div id="thankYouToast" class="toast">
+  <strong>Thank you!</strong><br>
+  Our team will contact you shortly.
+</div>
 
-        <ul>
-          <li>✔ Premium 3 & 4 BHK Luxury Residences</li>
-          <li>✔ Golf Course Road, Sector 43, Gurugram</li>
-          <li>✔ Low-density ultra-luxury development</li>
-          <li>✔ Developed by Godrej Properties</li>
-        </ul>
-      </div>
+<!-- ================= CONTACT ================= -->
+<section id="contact" class="contact-section">
+  <div class="contact-wrap">
 
-      <form class="contact-form">
-        <input type="text" placeholder="Your Name" required>
-        <input type="tel" placeholder="Phone Number" required>
-        <input type="email" placeholder="Email Address" required>
-        <button type="submit">Submit Enquiry</button>
-      </form>
+    <div class="contact-text">
+      <h2>Enquire Now</h2>
+      <p>
+        Get complete details about pricing, floor plans and site visit for
+        <strong>Godrej Miraya</strong> – ultra-luxury residences on Golf Course Road,
+        Sector 43, Gurugram.
+      </p>
 
+      <ul>
+        <li>✔ Premium 3 & 4 BHK Luxury Residences</li>
+        <li>✔ Golf Course Road, Sector 43, Gurugram</li>
+        <li>✔ Low-density ultra-luxury development</li>
+        <li>✔ Developed by Godrej Properties</li>
+      </ul>
     </div>
-  </section>
 
+    <form class="contact-form">
+      <input type="text" placeholder="Your Name" required>
+      <input type="tel" placeholder="Phone Number" required>
+      <input type="email" placeholder="Email Address" required>
+      <button type="submit">Submit Enquiry</button>
+    </form>
+
+  </div>
+</section>
   <!-- ================= FOOTER ================= -->
   <footer class="lp-footer">
     <div class="footer-divider"></div>
 
     <p>
       <strong>RERA Project Registration No.:</strong>
-      RC/REP/HARERA/GGM/_____/_____/_____
+      RC/REP/HARERA/GGM/870/602/2024/97
     </p>
 
     <p>
