--- a/max361/index.html
+++ b/max361/index.html
@@ -23,6 +23,13 @@
         <small class="tagline">SECTOR 36A GURUGRAM</small>
       </div>
       
+      <!-- MOBILE HAMBURGER (ADD HERE) -->
+      <div class="hamburger" id="hamburger">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+
       <nav class="menu" aria-label="Main navigation">
         <a href="#overview">Overview</a>
         <a href="#residences">Residence</a>
@@ -303,65 +310,100 @@
     </div>
 
   </section>
-  <!-- ===== APEX LANDBASE : COMMON POPUP FORM ===== -->
-  <div id="apexPopupBg" class="apex-popup-bg">
-    <div class="apex-popup-box">
+<!-- ================= POPUP FORM ================= -->
+<div id="apexPopupBg" class="apex-popup-bg">
 
-      <button id="apexPopupClose" class="apex-popup-close" aria-label="Close popup">
-        &times;
+  <div class="apex-popup-box">
+
+    <button id="apexPopupClose"
+            class="apex-popup-close"
+            aria-label="Close popup">
+      &times;
+    </button>
+
+    <div class="apex-popup-header">
+      <img src="/img/image.png" alt="Apex Landbase Logo">
+      <h3>Get Exclusive Details</h3>
+      <p>Register now to receive price, floor plan & offers</p>
+    </div>
+
+    <form id="apexLeadForm"
+          class="apex-lead-form"
+          autocomplete="off">
+
+      <input type="text"
+             id="apex-name"
+             placeholder="Your Name"
+             required>
+
+      <input type="email"
+             id="apex-email"
+             placeholder="Email Address"
+             required>
+
+      <input type="tel"
+             id="apex-phone"
+             placeholder="Phone Number"
+             required>
+
+      <!-- PAGE TRACKING -->
+      <input type="hidden" id="apex-page">
+
+      <button type="submit" class="apex-submit-btn">
+        Submit
       </button>
 
-      <div class="apex-popup-header">
-        <img src="/img/image.png" alt="Apex Landbase Logo">
-        <h3>Get Exclusive Details</h3>
-        <p>Register now to receive price, floor plan & offers</p>
-      </div>
-
-      <form id="apexLeadForm" class="apex-lead-form" autocomplete="off">
-        <input type="text" id="apex-name" placeholder="Your Name" aria-label="Your Name">
-        <input type="email" id="apex-email" placeholder="Email Address" aria-label="Email Address">
-        <input type="tel" id="apex-phone" placeholder="Phone Number" aria-label="Phone Number">
-
-        <!-- page tracking -->
-        <input type="hidden" id="apex-page">
-
-        <button type="submit" class="apex-submit-btn">Submit</button>
-      </form>
-    </div>
-    <div id="thankYouToast" class="toast">
-      <strong>Thank you!</strong><br>
-      Our team will contact you shortly.
-    </div>
+    </form>
   </div>
+</div>
+ <!-- THANK YOU TOAST -->
+  <div id="thankYouToast" class="toast">
+    <strong>Thank you!</strong><br>
+    Our team will contact you shortly.
+  </div>
+<!-- ================= CONTACT SECTION ================= -->
+<section id="contact" class="contact-section">
+  <div class="contact-wrap">
 
-  <!-- ================= CONTACT ================= -->
-  <section id="contact" class="contact-section">
-    <div class="contact-wrap">
+    <!-- LEFT : CONTACT TEXT (SAFE – WILL NOT CHANGE) -->
+    <div class="contact-text">
+      <h2>Enquire Now</h2>
+      <p>
+        Get complete details about pricing, floor plans and site visit for
+        Max Estate 361 – India’s first health-designed luxury residences.
+      </p>
 
-      <div class="contact-text">
-        <h2>Enquire Now</h2>
-        <p>
-          Get complete details about pricing, floor plans and site visit for
-          Max Estate 361 – India’s first health-designed luxury residences.
-        </p>
-
-        <ul>
-          <li>✔ Premium 3 & 4 BHK Residences</li>
-          <li>✔ Sector 36A, Dwarka Expressway, Gurugram</li>
-          <li>✔ Wellness-focused low density development</li>
-          <li>✔ Developed by Max Estates</li>
-        </ul>
-      </div>
-
-      <form class="contact-form">
-        <input type="text" placeholder="Your Name" required>
-        <input type="tel" placeholder="Phone Number" required>
-        <input type="email" placeholder="Email Address" required>
-        <button type="submit">Submit Enquiry</button>
-      </form>
-
+      <ul>
+        <li>✔ Premium 3 & 4 BHK Residences</li>
+        <li>✔ Sector 36A, Dwarka Expressway, Gurugram</li>
+        <li>✔ Wellness-focused low density development</li>
+        <li>✔ Developed by Max Estates</li>
+      </ul>
     </div>
-  </section>
+
+    <!-- RIGHT : FOOTER / CONTACT FORM -->
+    <form class="contact-form">
+
+      <input type="text"
+             placeholder="Your Name"
+             required>
+
+      <input type="tel"
+             placeholder="Phone Number"
+             required>
+
+      <input type="email"
+             placeholder="Email Address">
+
+      <button type="submit">
+        Submit Enquiry
+      </button>
+
+    </form>
+
+  </div>
+</section>
+<!-- ================= CONTACT END ================= -->
 
   <!-- ================= FOOTER ================= -->
   <footer class="lp-footer">
