--- a/shobha/index.html
+++ b/shobha/index.html
@@ -60,8 +60,8 @@
 
 <!-- ================= HERO ================= -->
 <section class="hero">
- <video autoplay muted loop playsinline>
-    <source src="https://www.pexels.com/download/video/30303656/" type="video/mp4">
+ <video autoplay muted loop playsinline preload="metadata" poster="/shobha/images/hero.webp">
+    <source src="/shobha/images/hero.webm.mp4" type="video/mp4">
   </video>
 
   <div class="hero-content">
