--- a/max361/index.html
+++ b/max361/index.html
@@ -426,30 +426,63 @@
       to change. Marketed by <strong>Apex Landbase</strong>.
     </p>
   </footer>
-  <!-- ================= BROCHURE MODAL ================= -->
-  <div id="brochurePopup" class="brochure-modal" role="dialog" aria-modal="true">
+  <!-- ================= MAX : BROCHURE MODAL ================= -->
+<div id="brochurePopup" class="brochure-modal" role="dialog" aria-modal="true">
 
-    <div class="modal-box">
+  <div class="modal-box">
 
-      <!-- CLOSE BUTTON -->
-      <span class="close-modal" onclick="closeBrochure()">×</span>
+    <!-- CLOSE BUTTON -->
+    <span class="close-modal" onclick="closeBrochure()">×</span>
 
-      <h3>Download Brochure</h3>
-      <p>Please fill your details to get the brochure</p>
+    <h3>Download Brochure</h3>
+    <p>Please fill your details to get the brochure</p>
 
-      <form id="brochureForm" onsubmit="submitBrochure(event)">
+    <form id="brochureForm">
 
-        <input type="text" placeholder="Your Name" required>
-        <input type="tel" placeholder="Phone Number" required>
-        <input type="email" placeholder="Email Address" required>
+      <!-- USER DETAILS -->
+      <input 
+        type="text" 
+        name="name" 
+        placeholder="Your Name" 
+        required
+      >
 
-        <button type="submit">Submit & Download</button>
+      <input 
+        type="tel" 
+        name="phone" 
+        placeholder="Phone Number" 
+        required
+      >
 
-      </form>
+      <input 
+        type="email" 
+        name="email" 
+        placeholder="Email Address" 
+        required
+      >
 
-    </div>
+      <!-- TRACKING FIELDS -->
+      <input 
+        type="hidden" 
+        name="source" 
+        value="Brochure Download"
+      >
+
+      <input 
+        type="hidden" 
+        name="project" 
+        value="MAX"
+      >
+
+      <button type="submit">
+        Submit & Download
+      </button>
+
+    </form>
 
   </div>
+
+</div>
   <!-- EMAILJS -->
   <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
   <script>
