--- a/whiteland/index.html
+++ b/whiteland/index.html
@@ -375,24 +375,34 @@
       <a href="index.html">Apex Landbase</a>
     </p>
   </footer>
+ <!-- ================= westin: BROCHURE MODAL ================= -->
+<div id="brochurePopup" class="brochure-modal" role="dialog" aria-modal="true">
 
-  <!-- ================= BROCHURE POPUP ================= -->
-  <div id="brochurePopup" class="brochure-modal" role="dialog" aria-modal="true">
-    <div class="modal-box">
+  <div class="modal-box">
 
-      <span class="close-modal" onclick="closeBrochure()">×</span>
+    <span class="close-modal" onclick="closeBrochure()">×</span>
 
-      <h3>Download Brochure</h3>
-      <p>Fill details to get brochure</p>
+    <h3>Download Brochure</h3>
+    <p>Please fill your details to get the brochure</p>
 
-      <form id="brochureForm" onsubmit="submitBrochure(event)">
-        <input type="text" placeholder="Your Name" required>
-        <input type="tel" placeholder="Phone Number" required>
-        <input type="email" placeholder="Email Address" required>
-        <button type="submit">Submit & Download</button>
-      </form>
+    <form id="brochureForm">
 
-    </div>
+      <input type="text" name="name" placeholder="Your Name" required>
+      <input type="tel" name="phone" placeholder="Phone Number" required>
+      <input type="email" name="email" placeholder="Email Address" required>
+
+      <!-- TRACKING -->
+      <input type="hidden" name="source" value="Brochure Download">
+      <input type="hidden" name="project" value="WESTIN">
+
+      <button type="submit">Submit & Download</button>
+
+    </form>
+
+  </div>
+
+</div>
+  
   </div>
   <!-- EMAILJS -->
   <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
